# symbolic-pcode

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: Cargo.toml  emulator.rs
crates/aiger-circuit/: Cargo.toml  README.md
crates/aiger-circuit/src/: aiger.rs  circuit.rs  gate.rs  index.rs  lib.rs  literal.rs  model.rs  tests.rs
crates/libsla/: Cargo.toml  README.md  build.rs
crates/libsla-sys/: Cargo.toml  README.md  build.rs
crates/libsla-sys/src/: api.rs  lib.rs  rust.rs  sys.rs
crates/libsla-sys/src/cpp/: bridge.cc  bridge.hh  error_handling.hh
crates/libsla/src/: lib.rs  opcodes.rs  sleigh.rs  tests.rs
crates/libsla/src/ffi/: sys.rs
crates/libsla/src/ffi/cpp/: bridge.cc  bridge.hh  error_handling.hh
crates/libsla/src/tests/: opcodes.rs  sleigh.rs
crates/pcode/: Cargo.toml
crates/pcode-interface/: Cargo.toml
crates/pcode-ops/: Cargo.toml
crates/pcode-ops/src/: convert.rs  lib.rs  ops.rs  pcode128.rs  test.rs  tests.rs  validate.rs  validator.rs
crates/pcode-ops/src/test/: pcode128.rs
crates/pcode-ops/src/tests/: convert.rs
crates/pcode/src/: emulator.rs  kernel.rs  lib.rs  mem.rs  pcode.rs  processor.rs  test_fixture.rs  tests.rs
crates/pcode/src/arch/: aarch64.rs  x86.rs
crates/pcode/src/arch/aarch64/: emulator.rs  linux.rs  processor.rs
crates/pcode/src/arch/x86/: emulator.rs  processor.rs
crates/pcode/src/kernel/: linux.rs
crates/pcode/src/kernel/linux/: emulator.rs
crates/pcode/src/tests/: emulator.rs  mem.rs  test_fixture.rs
crates/sla/: Cargo.toml  build.rs
crates/sla/src/: lib.rs  sleigh.rs
crates/sla/src/ffi/: mod.rs  rust.rs  sys.rs
crates/sla/src/ffi/cpp/: bridge.cc
crates/sleigh-compiler/: Cargo.toml  README.md  build.rs
crates/sleigh-compiler/src/: compiler.rs  lib.rs
crates/sleigh-compiler/src/ffi/: bridge.rs  ffi.rs  sys.rs
crates/sleigh-compiler/src/ffi/cpp/: bridge.cc  bridge.hh  error_handling.hh  slgh_compile_nomain.cc
crates/sym/: Cargo.toml  README.md
crates/sym/src/: aiger.rs  bit.rs  buf.rs  convert.rs  eval.rs  lib.rs  pcode.rs  sym.rs  tests.rs  vec.rs
crates/sym/src/tests/: aiger.rs  bit.rs  bitbuf.rs  bitvec.rs  convert.rs  eval.rs  pcode.rs
crates/sym/src/vec/: convert.rs  ops.rs
crates/sympcode/: Cargo.toml
crates/sympcode/src/: lib.rs  pcode.rs
crates/test-fixtures/: Cargo.toml
crates/test-fixtures/src/: lib.rs
sla/: Cargo.toml
sla/src/: lib.rs  opcodes.rs  sleigh.rs
sla/src/ffi/: sys.rs
sla/src/ffi/cpp/: bridge.cc  bridge.hh  error_handling.hh
src/: emulator.rs  lib.rs  mem.rs  processor.rs  sleigh.rs  sym.rs
src/ffi/: sys.rs
src/ffi/cpp/: bridge.cc  bridge.hh
sym/: Cargo.toml
sym/src/: aig.rs  aiger.rs  buf.rs  convert.rs  lib.rs  sym.rs
tests/: Cargo.toml  hello_world.rs  main.rs  pcode_coverage.rs  sleigh-compiler.rs  sleigh.rs  x86_64_emulator.rs
tests/common/: mod.rs
tests/data/coverage/: coverage  coverage.c
tests/hello_world/: util.rs
tests/pcode_coverage/: util.rs
tests/test-fixtures/linux-syscalls/: Cargo.toml
tests/test-fixtures/linux-syscalls/.cargo/: config.toml
tests/test-fixtures/pcode-coverage/: Cargo.toml
tests/test-fixtures/pcode-coverage/.cargo/: config.toml
tests/test-fixtures/pcode-coverage/src/: arithmetic.rs  bitwise.rs  bool.rs  cmp.rs  controlflow.rs  main.rs
