[workspace]
members = ["sla", "sym"]

[package]
name = "symbolic-pcode"
authors = ["mnemonikr"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
keywords = ["ghidra", "pcode", "sleigh", "libsla", "symbolic"]
categories = ["emulators"]

[dependencies]
sla = { path = "sla" }
sym = { path = "sym" }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
z3 = "0.12"

[[bench]]
name = "emulator"
harness = false
