[package]
name = "tests-integration"
description = "Integration tests"
version = "0.0.0"
publish = false

authors.workspace = true
license.workspace = true
edition.workspace = true 

[dependencies]
libsla = { path = "../crates/libsla" }
symbolic-pcode = { path = "../crates/pcode" }
pcode-ops = { path = "../crates/pcode-ops" }
sym = { path = "../crates/sym" }

[dev-dependencies]
flexi_logger = "0.31"
elf = "0.8"
sleigh-compiler = "2.0"

# For building test fixtures
escargot = "0.5"

# This requires z3 to be installed locally as a shared library.
z3 = "0.12"

# This supports building and statically linking it but requires cmake to be installed
# and substantially increases the cost of a clean build
# z3 = { version = "0.12", features = ["static-link-z3"] }

[[test]]
name = "integration-tests"
path = "main.rs"
