[package]
name = "libsla"
description = "Rust bindings to Ghidra Sleigh library libsla"
version = "0.4.0"

authors.workspace = true
edition.workspace = true 
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
libsla-sys = { path = "../libsla-sys" }

[dev-dependencies]
assert_fs = "1.1"
sleigh-compiler = "2.0"
