[package]
name = "libsla"
description = "Rust bindings to Ghidra Sleigh library libsla"
version = "0.4.2"

authors.workspace = true
edition.workspace = true 
license.workspace = true
repository.workspace = true

[features]
fuzzing = ["libsla-sys/fuzzing"]

[dependencies]
thiserror.workspace = true
libsla-sys = { version = "0.1.3" }
