[package]
name = "symbolic-pcode"
description = "Library for symbolic execution of pcode"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libsla = { path = "../libsla" }
pcode-ops = { path = "../pcode-ops" }
thiserror.workspace = true
