[package]
name = "symbit"
description = "Symbolic representation of binary data"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
aiger-circuit = { version = "1", optional = true }

[features]

# Enables integration with aiger-circuit for generating AIGER formatted circuit
aiger = ["dep:aiger-circuit"]
